2011-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix few potential memory misusage.

	* grub-core/font/font.c (load_font_index): Don't free char_index to
	avoid double free.

2011-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Installation): Fix several outdated claims.

2011-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle module_license on windows.

	* util/grub-pe2elf.c (MODLICENSE_SECTION): New definition. All following
	sections shifted.
	(insert_string): Make argument const char * instead of char *.
	(write_section_data): Handle long section names.
	Handle module_license.

2011-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/menuentry.c (grub_cmd_menuentry): Correctly
	handle class-free menuentries.
	(grub_normal_add_menu_entry): Add a check to be sure.

2011-05-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (set1_e0_mapping): Fix swap between
	PgUp and PgDown.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump version to 1.99.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Give ATA device a bit more time on first try in order to allow disks
	to spin up.

	* grub-core/disk/ata.c (grub_atapi_identify): Use GRUB_ATA_TOUT_DEV_INIT
	if dev->present is 1. Reset dev->present on failure.
	(grub_ata_device_initialize): Set dev->present to 1.
	* include/grub/ata.h (GRUB_ATA_TOUT_DEV_INIT): New value.
	(grub_ata_device): New member 'present'.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Update hash.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Flush caches on DMA memory.

	* grub-core/kern/mips/cache.S (grub_arch_sync_dma_caches): New function.
	* grub-core/bus/pci.c (grub_memalign_dma32): Flush caches.
	(grub_dma_free): Likewise.
	* include/grub/cache.h (grub_arch_sync_dma_caches): New declaration.

2011-05-13  Vladimir Serbinenko  <phcoder@gmail.com>
