@@ -33,7 +33,11 @@ loadfont_command (grub_command_t cmd __attribute__ ((unused)),
 
   while (argc--)
     if (grub_font_load (*args++) != 0)
-      return GRUB_ERR_BAD_FONT;
+      {
+	if (!grub_errno)
+	  return grub_error (GRUB_ERR_BAD_FONT, "invalid font");
+	return grub_errno;
+      }
 
   return GRUB_ERR_NONE;
 }
